// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fiber hook test useState dispatch with click event 1`] = `
<div
  id="root"
>
  <div
    id="counter"
  >
    2
  </div>
</div>
`;

exports[`fiber hook test useState init value 1`] = `
<div
  id="root"
>
  <div>
    1
  </div>
</div>
`;

exports[`fiber reconcile test mount stage element complex function type 1`] = `
<div
  id="root"
>
  <div>
    <span>
      1
    </span>
  </div>
</div>
`;

exports[`fiber reconcile test mount stage element function type 1`] = `
<div
  id="root"
>
  <div>
    1
  </div>
</div>
`;

exports[`fiber reconcile test mount stage element string type 1`] = `
<div
  id="root"
>
  <div
    class="test"
    style="color: red"
  />
</div>
`;
